# seaglider

post-processing/: README.md  glider_to_IOOS_seaglider.m  glider_to_IOOS_seaglider.py  main.py  oxy_gain_correction.py  oxy_gain_correction_linear.py  pyproject.toml  sg_to_IOOS.py
post-processing/test_data/: sg266_20260630T1442Z_pre_new.nc
post-processing/test_data/gliderdac_proc/: sg266_20260630T1442Z_post_new.nc
